[FEATURE] - animation module added

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,4 +15,6 @@
         routerLinkActive="active"
     >Heroes</a>
 </nav>
-<router-outlet></router-outlet>
+<div [@routeAnimation]="getAnimationData(routerOutlet)">
+    <router-outlet #routerOutlet="outlet"></router-outlet>
+</div>
